Fix centered message style and footer letter spacing
Improve centered message style
Improve footer letter spacing

--- a/source/stylesheets/cart.sass
+++ b/source/stylesheets/cart.sass
@@ -162,13 +162,3 @@ a.continue-shopping
   &:active, &:focus, &:hover
     border-color: transparent
     color: $primary-text-color
-
-.empty-cart-message
-  color: $secondary-text-color
-  font-family: $secondary-font
-  font-size: 20px
-  font-style: italic
-  text-align: center
-
-  a
-    text-decoration: underline
