--- a/source/stylesheets/contact.sass
+++ b/source/stylesheets/contact.sass
@@ -44,13 +44,6 @@
   position: relative
   top: 10px
 
-.contact-sent
-  color: $secondary-text-color
-  font-family: $secondary-font
-  font-size: 20px
-  font-style: italic
-  text-align: center
-
 button.send-message-button
   max-width: 300px
 
